@@ -1,3 +1,7 @@
+Mon Dec 14 13:45:31 GMT 2009  Richard Boulton <richard@tartarus.org>
+
+	* xappy/cachemanager/generic.py: Implement get_facets() properly.
+
 Mon Dec 14 11:41:35 GMT 2009  Richard Boulton <richard@tartarus.org>
 
 	* xappy/cachemanager/generic.py: Add storage of statistics and
